force-app/main/default/objects/Bulk_Offline_Lead_Creation_Fields__c/Bulk_Offline_Lead_Creation_Fields__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Bulk Offline Lead Creation Fields</label>
</CustomObject>