force-app/main/default/objects/Bulk_Offline_Lead_Creation_Fields__c/fields/OverRide_InCase_Of_Duplication__c.field-meta.xml
<CustomField>
    <fullName>OverRide_InCase_Of_Duplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OverRide InCase Of Duplication?</label>
    <type>Checkbox</type>
</CustomField>