force-app/main/default/objects/Bulk_Offline_Lead_Creation_Fields__c/fields/UseInAccount__c.field-meta.xml
<CustomField>
    <fullName>UseInAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UseInAccount</label>
    <type>Checkbox</type>
</CustomField>