force-app/main/default/objects/Bulk_Offline_Lead_Creation_Fields__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Field_Data_Type__c</columns>
    <columns>Field_Label_Name__c</columns>
    <columns>In_Use__c</columns>
    <columns>OverRide_InCase_Of_Duplication__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>